# MCQs_ulitmate

./: .env.example  .gitignore  Commands.txt  README.md
.playwright-mcp/: page-2026-06-06T15-06-06-334Z.yml  page-2026-06-07T10-24-22-470Z.yml  page-2026-06-07T10-24-46-848Z.yml  page-2026-06-07T10-24-56-486Z.yml  page-2026-06-07T10-25-17-138Z.yml  page-2026-06-07T10-27-06-946Z.yml  page-2026-06-07T10-33-43-753Z.yml  page-2026-06-07T10-33-57-527Z.yml  page-2026-06-07T10-34-05-273Z.yml  page-2026-06-07T10-37-16-124Z.yml
backend/: .env.example  README.md  nixpacks.toml  pyproject.toml  requirements.txt  test_pdf_debug.py  test_pdf_edge.py  test_pdf_full.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/routes/: auth.py  config.py  dashboard.py  materials.py  mistakes.py  question_sets.py  quiz_attempts.py  settings.py
backend/app/core/: config.py  security.py
backend/app/db/: supabase_client.py
backend/app/schemas/: common.py  dashboard.py  materials.py  mistakes.py  questions.py  quiz.py  settings.py
backend/app/services/: __init__.py  study_data_cleanup.py
backend/app/services/extraction/: __init__.py  csv_extractor.py  docx_extractor.py  json_extractor.py  mcq_parser.py  pdf_extractor.py  text_extractor.py
backend/app/services/generation/: __init__.py  mcq_generator.py  provider_factory.py  providers.py  short_question_generator.py
backend/app/services/pdf/: __init__.py  report_generator.py
backend/app/services/quiz/: __init__.py  mistake_service.py  recommendation_service.py  scoring_service.py
backend/tests/: test_unit.py
(+91 files in other folders)
