[project]
name = "mcq-mentor-backend"
version = "0.1.0"
description = "MCQ Mentor backend: study material extraction, MCQ generation, quiz scoring, mistake bank."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3",
    "cryptography>=44",
    "httpx>=0.27",
    "supabase>=2.10",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "UP042", "SIM105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
